--- a/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
@@ -1,7 +1,7 @@
 .register{
   padding: 1em;
   display: table;
-  margin: 0 auto;
+  margin: 40px auto 0 auto;
   position: relative;
   text-transform: uppercase;
   cursor: pointer;
@@ -12,7 +12,7 @@
     left: 0;
     opacity: 1;
     top: 50%;
-    border: 5px solid white;
+    border: 5px solid rgb(144, 195, 224);
     height: 80%;
     background-color: #007ab9;
     outline: solid #007ab9 5px;
@@ -25,10 +25,11 @@
 
 .register:hover{
   color: $bpnBlue;
+  text-shadow: none;
   &:after{
-    // opacity: 0.5;
-    text-shadow: none;
+    // opacity: 0.5;  
     background-color: white;
+    outline: solid transparent 5px;
     border: 5px solid $bpnBlue;
   }
 }
