--- a/websites/BPN/www/site/compiled-dev/css/homePg.css
+++ b/websites/BPN/www/site/compiled-dev/css/homePg.css
@@ -42,12 +42,37 @@
 #about-frame {
   padding: 1em;
   background-color: white;
+  position: relative;
+  top: -10px;
+  box-shadow: 0px -6px 30px #4a4a4a;
 }
 #about-frame h2, #about-frame h3 {
   text-align: center;
 }
 #about-frame h3 {
   color: #097ABB;
+}
+
+#experience-frame {
+  background-image: url("/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/lake-merrit.jpg");
+  background-size: cover;
+}
+
+#events-frame {
+  padding: 1em;
+}
+#events-frame .hp-events-teaser {
+  width: 33%;
+  display: inline-block;
+}
+#events-frame .hp-events-teaser .category {
+  width: 100%;
+  height: 60px;
+  background-color: orange;
+}
+#events-frame .hp-events-teaser .image-container {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 100% 74%, 59% 74%, 44% 100%, 44% 74%, 0% 74%, 0% 100%);
+  -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 100% 74%, 59% 74%, 44% 100%, 44% 74%, 0% 74%, 0% 100%);
 }
 
 /*# sourceMappingURL=homePg.css.map */
