--- a/websites/BPN/www/site/compiled-dev/css/news.css
+++ b/websites/BPN/www/site/compiled-dev/css/news.css
@@ -32,7 +32,8 @@ body.load-out:before {
 }
 
 .bounding-container {
-  max-width: 1500px;
+  max-width: 1300px;
+  margin: 0 auto;
 }
 
 .copy-container {
