--- a/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
@@ -44,10 +44,36 @@
 #about-frame{
   padding: 1em;
   background-color: white;
+  position: relative;
+  top: -10px;
+  box-shadow: 0px -6px 30px #4a4a4a;
   h2,h3{
     text-align: center;
   }
   h3{
     color: $bpnBlue;
+  }
+}
+
+#experience-frame{
+  background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/lake-merrit.jpg');
+  background-size: cover;
+}
+
+#events-frame{
+  padding: 1em;
+  .hp-events-teaser{
+    // box-shadow: -2px 4px 10px #ccc;
+    width: 33%;
+    display: inline-block;
+    .category{
+      width: 100%;
+      height: 60px;
+      background-color: orange;
+    }
+    .image-container{
+      clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 100% 74%, 59% 74%, 44% 100%, 44% 74%, 0% 74%, 0% 100%);
+      -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 100% 74%, 59% 74%, 44% 100%, 44% 74%, 0% 74%, 0% 100%);
+    }
   }
 }
