--- a/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
@@ -69,11 +69,61 @@
     .category{
       width: 100%;
       height: 60px;
-      background-color: orange;
     }
     .image-container{
       clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 100% 74%, 59% 74%, 44% 100%, 44% 74%, 0% 74%, 0% 100%);
       -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 100% 74%, 59% 74%, 44% 100%, 44% 74%, 0% 74%, 0% 100%);
+      height: 250px;
+      background-size: cover;
+    }
+    // the varying catagories
+    &--category1{
+      .category{
+        background-color: $bpnBlue;
+      }
+      .image-container{
+        background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/lake-merrit.jpg');
+      }
+    }
+    &--category2{
+      .category{
+        background-color: yellow;
+      }
+      .image-container{
+        background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/lake-merrit.jpg');
+      }
+    }
+    &--category3{
+      .category{
+        background-color: orange;
+      }
+      .image-container{
+        background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/lake-merrit.jpg');
+      }
+    }
+    &--category4{
+      .category{
+        background-color: gray;
+      }
+      .image-container{
+        background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/lake-merrit.jpg');
+      }
+    }
+    &--category5{
+      .category{
+        background-color: tan;
+      }
+      .image-container{
+        background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/lake-merrit.jpg');
+      }
+    }
+    &--category6{
+      .category{
+        background-color: gold;
+      }
+      .image-container{
+        background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/lake-merrit.jpg');
+      }
     }
   }
 }
