--- a/websites/BPN/www/site/compiled-dev/css/homePg.css
+++ b/websites/BPN/www/site/compiled-dev/css/homePg.css
@@ -25,6 +25,14 @@
   transition: 0.5s;
 }
 
+.center-copy {
+  top: 50%;
+  transform: translateY(-50%);
+  position: relative;
+  display: block;
+  text-align: center;
+}
+
 .register:hover {
   color: #097ABB;
   text-shadow: none;
@@ -33,6 +41,17 @@
   background-color: white;
   outline: solid transparent 5px;
   border: 5px solid #097ABB;
+}
+
+.section-title {
+  position: relative;
+  left: 0;
+  width: 300px;
+  height: 70px;
+  text-align: center;
+  background-color: #b4b6b7;
+  color: white;
+  margin: 40px 0;
 }
 
 #welcome-frame video {
@@ -58,11 +77,9 @@
   background-size: cover;
 }
 
-#events-frame {
-  padding: 1em;
-}
 #events-frame .hp-events-teaser {
-  width: 33%;
+  width: 31.1%;
+  margin: 20px 1%;
   display: inline-block;
 }
 #events-frame .hp-events-teaser .category {
