--- a/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
@@ -25,15 +25,33 @@
   }
 }
 
+.center-copy{
+  top: 50%;
+  transform: translateY(-50%);
+  position: relative;
+  display: block;
+  text-align: center;
+}
+
 .register:hover{
   color: $bpnBlue;
   text-shadow: none;
   &:after{
-    // opacity: 0.5;  
     background-color: white;
     outline: solid transparent 5px;
     border: 5px solid $bpnBlue;
   }
+}
+
+.section-title{
+  position: relative;
+  left: 0;
+  width: 300px;
+  height: 70px;
+  text-align: center;
+  background-color: #b4b6b7;
+  color: white;
+  margin: 40px 0;
 }
 
 #welcome-frame{
@@ -61,10 +79,9 @@
 }
 
 #events-frame{
-  padding: 1em;
   .hp-events-teaser{
-    // box-shadow: -2px 4px 10px #ccc;
-    width: 33%;
+    width: 31.1%;
+    margin: 20px 1%;
     display: inline-block;
     .category{
       width: 100%;
