--- a/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
@@ -83,6 +83,7 @@
     width: 22.7%;
     margin: 20px 1%;
     display: inline-block;
+    box-shadow: -2px 3px 14px #777777;
     .category{
       width: 100%;
       height: 60px;
