--- a/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
@@ -89,8 +89,8 @@
       height: 60px;
     }
     .image-container{
-      clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 100% 74%, 59% 74%, 44% 100%, 44% 74%, 0% 74%, 0% 100%);
-      -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 100% 74%, 59% 74%, 44% 100%, 44% 74%, 0% 74%, 0% 100%);
+      // clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 100% 74%, 59% 74%, 44% 100%, 44% 74%, 0% 74%, 0% 100%);
+      // -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 100% 74%, 59% 74%, 44% 100%, 44% 74%, 0% 74%, 0% 100%);
       height: 250px;
       background-size: cover;
     }
