--- a/websites/BPN/www/site/templates/styles/sass/events.scss
+++ b/websites/BPN/www/site/templates/styles/sass/events.scss
@@ -1,5 +1,5 @@
 @import "partials/variables.scss";
 @import "partials/layout.scss";
 @import "partials/filterNav.scss";
-@import "partials/teaserItem.scss";
+@import "partials/eventsTeasers.scss";
 @import "partials/map.scss";
