--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -119,8 +119,11 @@ Animation
 
 .teaser {
   width: 30%;
-  display: inline-block;
+  float: left;
   margin: 20px 1.66%;
+  box-shadow: 0px 0px 20px -9px;
+  background-color: white;
+  cursor: pointer;
 }
 .teaser .image-container {
   position: relative;
@@ -135,10 +138,69 @@ Animation
   content: "";
   position: absolute;
   bottom: 0;
+  left: 0;
   width: 100%;
   height: 40px;
   background-color: yellow;
   opacity: 0.5;
+}
+.teaser figcaption {
+  padding: 1em;
+}
+.teaser figcaption h2 {
+  margin-bottom: 0;
+}
+
+.article-details {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: black;
+  z-index: 100;
+  overflow-y: scroll;
+}
+.article-details img {
+  position: fixed;
+  width: 50%;
+}
+.article-details .close-content-btn {
+  position: absolute;
+  top: 30px;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  background-color: white;
+  z-index: 10;
+  cursor: pointer;
+}
+.article-details .article-copy {
+  width: 45%;
+  position: absolute;
+  right: 0;
+  color: white;
+  z-index: 2;
+}
+.article-details .article-copy p {
+  word-wrap: break-word;
+}
+
+figure.open-up {
+  display: block !important;
+  max-width: none;
+  max-height: none;
+  margin: 0;
+  z-index: 100;
+}
+figure.open-up img {
+  position: relative;
+  right: -100px;
+}
+figure.open-up figcaption {
+  opacity: 0;
 }
 
 #map {
