--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -1,7 +1,10 @@
 .teaser{
   width: 30%;
-  display: inline-block;
+  float: left;
   margin: 20px 1.66%;
+  box-shadow: 0px 0px 20px -9px;
+  background-color: white;
+  cursor: pointer;
   .image-container{
     position: relative;
     width: 100%;
@@ -14,10 +17,74 @@
       content: "";
       position: absolute;
       bottom: 0;
+      left: 0;
       width: 100%;
       height: 40px;
       background-color: yellow;
       opacity: 0.5;
     }
   }
+  figcaption{
+    padding: 1em;
+    h2{
+      margin-bottom: 0;
+    }
+  }
+}
+
+
+
+.article-details{
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: black;
+  z-index: 100;
+  overflow-y: scroll;
+  img{
+    position: fixed;
+    width: 50%;
+  }
+  .close-content-btn{
+    position: absolute;
+    top: 30px;
+    right: 0;
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    z-index: 10;
+    cursor: pointer;
+  }
+  .article-copy{
+    width: 45%;
+    position: absolute;
+    right: 0;
+    color: white;
+    z-index: 2;
+    p{
+      word-wrap: break-word;
+    }
+  }
+}
+
+
+figure.open-up {
+  display: block !important;
+  // position: fixed;
+  max-width: none;
+  max-height: none;
+  margin: 0;
+  z-index: 100;
+  img{
+    position: relative;
+    right: -100px;
+  }
+  figcaption{
+    opacity: 0;
+  }
+
 }
