--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -32,8 +32,6 @@
   }
 }
 
-
-
 .article-details{
   opacity: 0;
   visibility: hidden;
@@ -45,9 +43,11 @@
   background-color: black;
   z-index: 100;
   overflow-y: scroll;
+  float: left;
   img{
-    position: fixed;
+    position: relative;
     width: 50%;
+    float: left;
   }
   .close-content-btn{
     position: absolute;
@@ -69,8 +69,11 @@
       word-wrap: break-word;
     }
   }
+  .image-copy-container{
+    margin-bottom: 1em;
+    @include clearfix();
+  }
 }
-
 
 figure.open-up {
   display: block !important;
