--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -119,6 +119,7 @@ Animation
 
 .teaser {
   width: 30%;
+  height: 510px;
   float: left;
   margin: 20px 1.66%;
   box-shadow: 0px 0px 20px -9px;
@@ -181,10 +182,10 @@ Animation
 }
 .article-details .article-copy {
   width: 45%;
-  position: absolute;
-  right: 0;
+  margin-left: 4%;
+  float: left;
+  display: inline-block;
   color: white;
-  z-index: 2;
 }
 .article-details .article-copy p {
   word-wrap: break-word;
