--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -1,5 +1,6 @@
 .teaser{
   width: 30%;
+  height: 510px;
   float: left;
   margin: 20px 1.66%;
   box-shadow: 0px 0px 20px -9px;
@@ -61,10 +62,10 @@
   }
   .article-copy{
     width: 45%;
-    position: absolute;
-    right: 0;
+    margin-left: 4%;
+    float: left;
+    display: inline-block;
     color: white;
-    z-index: 2;
     p{
       word-wrap: break-word;
     }
