--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -160,7 +160,7 @@ Animation
   height: 100%;
   top: 0;
   left: 0;
-  background-color: black;
+  background-color: white;
   z-index: 100;
   overflow-y: scroll;
   float: left;
@@ -185,7 +185,7 @@ Animation
   margin-left: 4%;
   float: left;
   display: inline-block;
-  color: white;
+  color: #333;
 }
 .article-details .article-copy p {
   word-wrap: break-word;
@@ -194,6 +194,12 @@ Animation
   margin-bottom: 1em;
   overflow: auto;
   zoom: 1;
+}
+.article-details .social-share {
+  margin-top: 2em;
+  width: 100%;
+  height: 50px;
+  background-color: tan;
 }
 
 figure.open-up {
