--- a/websites/BPN/www/site/compiled-dev/css/news.css
+++ b/websites/BPN/www/site/compiled-dev/css/news.css
@@ -164,10 +164,12 @@ body {
   background-color: black;
   z-index: 100;
   overflow-y: scroll;
+  float: left;
 }
 .article-details img {
-  position: fixed;
+  position: relative;
   width: 50%;
+  float: left;
 }
 .article-details .close-content-btn {
   position: absolute;
@@ -181,13 +183,18 @@ body {
 }
 .article-details .article-copy {
   width: 45%;
-  position: absolute;
-  right: 0;
+  margin-left: 4%;
+  float: left;
+  display: inline-block;
   color: white;
-  z-index: 2;
 }
 .article-details .article-copy p {
   word-wrap: break-word;
+}
+.article-details .image-copy-container {
+  margin-bottom: 1em;
+  overflow: auto;
+  zoom: 1;
 }
 
 figure.teaser {
