--- a/websites/BPN/www/site/templates/styles/sass/partials/_variables.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_variables.scss
@@ -3,6 +3,7 @@ $pageBG: #efefef;
 $navBG: #f7f7f7;
 $bpnBlue: #097ABB;
 $bpnDarkBlue: #383C3E;
+$bpnParagraph: #333;
 
 // layout
 $bounding-container: 1300px;
