added photoGall logic

--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -195,6 +195,12 @@ Animation
   overflow: auto;
   zoom: 1;
 }
+.article-details .photo-gallery-teaser {
+  width: 160px;
+}
+.article-details .photo-gallery-teaser img {
+  width: 100%;
+}
 .article-details .social-share {
   margin-top: 2em;
   width: 100%;
