--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -62,7 +62,7 @@
   }
   .article-copy{
     width: 45%;
-    margin-left: 4%;
+    margin-left: 1.5em;
     float: left;
     display: inline-block;
     color: $bpnParagraph;
@@ -76,8 +76,20 @@
   }
   .photo-gallery-teaser{
     width: 160px;
+    float: right;
     img{
+      float: none;
       width: 100%;
+    }
+  }
+  .post-logistics{
+    display: inline-block;
+    width: 50%;
+    .post-date{
+
+    }
+    .post-address{
+      
     }
   }
   .social-share{
@@ -85,6 +97,14 @@
     width: 100%;
     height: 50px;
     background-color: tan;
+  }
+  .close-details{
+    margin: 2em 0;
+    padding: 1em 0;
+    border-top: 1px solid $bpnBlue;
+    border-bottom: 1px solid $bpnBlue;
+    color: $bpnBlue;
+    text-align: center;
   }
 }
 
