--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -85,11 +85,15 @@
   .post-logistics{
     display: inline-block;
     width: 50%;
+    p{
+      margin-bottom: 0.5em;
+      font-weight: bold;
+    }
     .post-date{
 
     }
     .post-address{
-      
+
     }
   }
   .social-share{
