tweaked event styles

--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -51,7 +51,7 @@
     float: left;
   }
   .close-content-btn{
-    position: absolute;
+    position: fixed;
     top: 30px;
     right: 0;
     width: 30px;
