--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -171,7 +171,7 @@ Animation
   float: left;
 }
 .article-details .close-content-btn {
-  position: absolute;
+  position: fixed;
   top: 30px;
   right: 0;
   width: 30px;
