--- a/websites/BPN/www/site/compiled-dev/css/news.css
+++ b/websites/BPN/www/site/compiled-dev/css/news.css
@@ -172,7 +172,7 @@ body {
   float: left;
 }
 .article-details .close-content-btn {
-  position: absolute;
+  position: fixed;
   top: 30px;
   right: 0;
   width: 30px;
