--- a/websites/BPN/www/site/templates/styles/sass/partials/_teaserItem.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_teaserItem.scss
@@ -66,7 +66,7 @@ body{
     float: left;
   }
   .close-content-btn{
-    position: absolute;
+    position: fixed;
     top: 30px;
     right: 0;
     width: 30px;
