--- a/websites/BPN/www/site/compiled-dev/css/base.css
+++ b/websites/BPN/www/site/compiled-dev/css/base.css
@@ -41,6 +41,8 @@ body.load-out:before {
 .bounding-container {
   max-width: 1300px;
   margin: 0 auto;
+  overflow: auto;
+  zoom: 1;
 }
 
 .copy-container {
@@ -475,6 +477,7 @@ html {
 }
 
 body {
+  font-family: "Source Sans Pro", sans-serif;
   height: 100vh;
   overflow-x: hidden;
   margin: 0;
