--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -34,6 +34,8 @@ body.load-out:before {
 .bounding-container {
   max-width: 1300px;
   margin: 0 auto;
+  overflow: auto;
+  zoom: 1;
 }
 
 .copy-container {
